--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
                 <ul class="sections">
                     <li><a href="#about"class="humberger-menu-section">ABOUT</a></li>
                     <li><a href="#food"class="humberger-menu-section">FOOD</a></li>
-                    <li><a href="#"class="humberger-menu-section">DRINK</a></li>
-                    <li><a href="#"class="humberger-menu-section">ACCESS</a></li>
-                    <li><a href="#"class="humberger-menu-section">CONTACT</a></li>
+                    <li><a href="#drink"class="humberger-menu-section">DRINK</a></li>
+                    <li><a href="#access"class="humberger-menu-section">ACCESS</a></li>
+                    <li><a href="#contact"class="humberger-menu-section">CONTACT</a></li>
                 </ul>
             </nav>
 
@@ -213,7 +213,7 @@
                         </div>
                     </div>
                 
-                    <div class="menu-h3">
+                    <div class="menu-h3"　id="drink">
                         <img src="img/drink.png">
                         <h3>DRINK<span>ドリンク</span></h3>
                     </div>
