--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                         </div>
                     </div>
                 
-                    <div class="menu-h3"　id="drink">
+                    <div　id="drink" class="menu-h3">
                         <img src="img/drink.png">
                         <h3>DRINK<span>ドリンク</span></h3>
                     </div>
