--- a/index.html
+++ b/index.html
@@ -312,14 +312,16 @@
                 </div>
                 <div class="access-text">
                     <div class="address">
-                        <p>〒527-0206　滋賀県東近江市杠葉尾町854</p>
-                        <p>TEL : 090-9867-4351</p>
-                        <p>OPEN : 12:00～17:00</p>
+                        <p>〒〇〇〇-〇〇〇〇<br>
+			   広島県〇〇市〇〇１２３
+			</p>
+                        <p>TEL :〇〇〇-〇〇〇-〇〇〇</p>
+                        <p>OPEN :１１:00～16:00</p>
                     </div>
                     <div class="border"></div>
                     <div class="road">
                         <h4>◎〇〇よりお車でお越しの場合　約40分</h4>
-                        <p>名神高速道路<br>
+                        <p>〇〇高速道路<br>
                             〇〇インターチェンジ下車から〇〇号線を30分<br>
                         </p>
                         <h4>◎〇〇方面よりお車でお越しの場合　約60分</h4>
@@ -365,9 +367,9 @@
         </h1>
         <div class="footer-textbox">
             <p class="footer-address">
-                〒527-0206<br>
-                滋賀県東近江市杠葉尾町854<br>
-                TEL:090-9867-4351
+                〒〇〇〇-〇〇〇〇<br>
+                広島県〇〇市〇〇１２３<br>
+                TEL:〇〇〇-〇〇〇-〇〇〇
             </p>
             <p class="footer-day">
                 [定休日：不定休]<br>
