--- a/index.html
+++ b/index.html
@@ -312,11 +312,11 @@
                 </div>
                 <div class="access-text">
                     <div class="address">
-                        <p>〒〇〇〇-〇〇〇〇<br>
-			   広島県〇〇市〇〇１２３
+                        <p>〒◯◯◯-◯◯◯◯<br>
+			   広島県◯◯市◯◯町１２３
 			</p>
-                        <p>TEL :〇〇〇-〇〇〇-〇〇〇</p>
-                        <p>OPEN :１１:00～16:00</p>
+                        <p>TEL:123-4567-8910</p>
+                        <p>OPEN :11:00～16:00</p>
                     </div>
                     <div class="border"></div>
                     <div class="road">
@@ -367,9 +367,9 @@
         </h1>
         <div class="footer-textbox">
             <p class="footer-address">
-                〒〇〇〇-〇〇〇〇<br>
-                広島県〇〇市〇〇１２３<br>
-                TEL:〇〇〇-〇〇〇-〇〇〇
+                〒◯◯◯-◯◯◯◯<br>
+                広島県◯◯市◯◯１２３<br>
+                TEL:123-4567-8910
             </p>
             <p class="footer-day">
                 [定休日：不定休]<br>
